--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">司徒龍錦</h1>
 			<h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">Clean & minimal Theme</h3>
 			<ul class="list-inline intro-social-buttons">
-				<li><a href="https://twitter.com/galantiandrea" class="btn  btn-lg mybutton_cyano wow fadeIn" data-wow-delay="0.8s"><span class="network-name">Twitter</span></a>
+				<li><a href="https://www.facebook.com/comictoy00099" class="btn  btn-lg mybutton_cyano wow fadeIn" data-wow-delay="0.8s"><span class="network-name">facebook</span></a>
 				</li>
 				<li id="download" ><a href="#downloadlink" class="btn  btn-lg mybutton_standard wow swing wow fadeIn" data-wow-delay="1.2s"><span class="network-name">Free Download</span></a>
 				</li>
