--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
 			<div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
 				<ul class="nav navbar-nav">
 					
-					<li class="menuItem"><a href="#whatis">What is?</a></li>
-					<li class="menuItem"><a href="#useit">Use It</a></li>
-					<li class="menuItem"><a href="#screen">Screenshot</a></li>
-					<li class="menuItem"><a href="#credits">Credits</a></li>
-					<li class="menuItem"><a href="#contact">Contact</a></li>
+					<li class="menuItem"><a href="#whatis">有趣又可愛的實況主</a></li>
+					<li class="menuItem"><a href="#useit">來加入我們吧!</a></li>
+					<li class="menuItem"><a href="#screen">觀看各種精華</a></li>
+					<li class="menuItem"><a href="#credits">來與貓襄互動吧</a></li>
+					<li class="menuItem"><a href="#contact">草尼瑪的窩居</a></li>
 				</ul>
 			</div>
 		   
