--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#home">Flatfy</a>
+				<a class="navbar-brand" href="#home">來看看吧!</a>
 			</div>
 
 			<div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
