--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="intro-header">
 		<div class="col-xs-12 text-center abcen1">
 			<h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">司徒龍錦</h1>
-			<h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">Clean & minimal Theme</h3>
+			<h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">兔子教教主</h3>
 			<ul class="list-inline intro-social-buttons">
 				<li><a href="https://www.facebook.com/comictoy00099" class="btn  btn-lg mybutton_cyano wow fadeIn" data-wow-delay="0.8s"><span class="network-name">facebook</span></a>
 				</li>
