--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			<ul class="list-inline intro-social-buttons">
 				<li><a href="https://www.facebook.com/comictoy00099" class="btn  btn-lg mybutton_cyano wow fadeIn" data-wow-delay="0.8s"><span class="network-name">facebook</span></a>
 				</li>
-				<li id="download" ><a href="#downloadlink" class="btn  btn-lg mybutton_standard wow swing wow fadeIn" data-wow-delay="1.2s"><span class="network-name">Free Download</span></a>
+				<li id="download" ><a href="#downloadlink" class="btn  btn-lg mybutton_standard wow swing wow fadeIn" data-wow-delay="1.2s"><span class="network-name">Instagram</span></a>
 				</li>
 			</ul>
 		</div>    
@@ -116,7 +116,7 @@
 			<div class="row">
 			
 				<div class="col-sm-4 wow fadeInDown text-center">
-				  <img class="rotate" src="img/icon/tweet.svg" alt="Generic placeholder image">
+				  <img class="rotate" src="unnamed" alt="Generic placeholder image">
 				  <h3>成為兔子教成員</h3>
 				  <p class="lead">Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. </p>
 
