--- a/index.html
+++ b/index.html
@@ -178,13 +178,13 @@
                 </div>
 				
                 <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">   
-                    <h3 class="section-heading">Full Responsive</h3>
-					<div class="sub-title lead3">Lorem ipsum dolor sit atmet sit dolor greand fdanrh<br> sdfs sit atmet sit dolor greand fdanrh sdfs</div>
+                    <h3 class="section-heading">重要資訊</h3>
+					<div class="sub-title lead3">草尼瑪與司徒龍錦的故事</div>
                     <p class="lead">
-						In his igitur partibus duabus nihil erat, quod Zeno commuta rest gestiret. 
-						Sed virtutem ipsam inchoavit, nihil ampliusuma. Scien tiam pollicentur, 
-						uam non erat mirum sapientiae lorem cupido
-						patria esse cariorem. Quae qui non vident, nihilamane umquam magnum ac cognitione.
+						在某草尼瑪到這個世界的時候，意識到自己是個人類，但因為
+						不知道人類到底是個什麼樣的存在，所以努力的去了解人類的
+						日常生活，司徒龍錦就成為了學習對象，因為她看起來是個標
+						準人類。
 					</p>
 
 					 <p><a class="btn btn-embossed btn-primary" href="#" role="button">View Details</a> 
