--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 			<div class="row">
 			
 				<div class="col-sm-4 wow fadeInDown text-center">
-				  <img class="rotate" src="unnamed" alt="Generic placeholder image">
+				  <img class="rotate" src="unnamed.jpg" alt="Generic placeholder image">
 				  <h3>成為兔子教成員</h3>
 				  <p class="lead">追隨兔子教教主的FB或IG，他會給你無限的原神或託蘭遊戲片段 </p>
 
