--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 				</div><!-- /.col-lg-4 -->
 				
 				<div class="col-sm-4 wow fadeInDown text-center">
-				  <img  class="rotate" src="0008.png" alt="Generic placeholder image">
+				  <img  class="rotate" src="img/icon/picture.svg" alt="Generic placeholder image">
 				   <h3>日常美圖</h3>
 				   <p class="lead">草尼瑪會經常繪製自家老婆的圖，但很長畫到一半就死了 </p>
 				   <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
