--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 				</div><!-- /.col-lg-4 -->
 				
 				<div class="col-sm-4 wow fadeInDown text-center">
-				  <img  class="rotate" src="img/icon/retina.svg" alt="Generic placeholder image">
+				  <img  class="rotate" src="Lama1.png" alt="Generic placeholder image">
 				   <h3>草尼瑪資訊</h3>
 					<p class="lead">司徒龍錦的老婆，但總是喜歡叫司徒龍錦老婆 </p>
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
