--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img  class="rotate" src="Lama1.png" alt="Generic placeholder image">
 				   <h3>草尼瑪資訊</h3>
-					<p class="lead">司徒龍錦的老婆，但總是喜歡叫司徒龍錦老婆 </p>
+					<p class="lead">司徒龍錦的老婆，但總是喜歡叫司徒龍錦老婆，興趣跟老婆完全不一樣 </p>
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 				
@@ -158,7 +158,7 @@
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img  class="rotate" src="img/icon/browser.svg" alt="Generic placeholder image">
 				   <h3>追隨繪師</h3>
-				 <p class="lead">阿瑪的廢宅日常 </p>
+				 <p class="lead">阿瑪的廢宅日常「起床打APEX啦~」 </p>
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 				
