--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 			<div class="col-md-6 col-md-offset-3 text-center wrap_title">
 				<h2>司徒龍錦的日常</h2>
-				<p class="lead" style="margin-top:0">A special thanks to Death.</p>
+				<p class="lead" style="margin-top:0">與草尼瑪的觀察日誌</p>
 				
 			</div>
 			
