--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@
 					</p>
 					
 					<ul class="descp lead2">
-						<li><i class="glyphicon glyphicon-signal"></i> Reliable and Secure Platform</li>
-						<li><i class="glyphicon glyphicon-refresh"></i> Everything is perfectly orgainized for future</li>
-						<li><i class="glyphicon glyphicon-headphones"></i> Attach large file easily</li>
+						<li><i class="glyphicon glyphicon-signal"></i> 委託價錢大約一張150~250</li>
+						<li><i class="glyphicon glyphicon-refresh"></i> 價錢可以在商談˙ˇ˙看要加甚麼</li>
+						<li><i class="glyphicon glyphicon-headphones"></i> 想與草尼瑪商談?委託˙ˇ˙</li>
 					</ul>
 				</div>           
             </div>
@@ -266,8 +266,8 @@
         <div class="container">
           <div class="row" >
 			 <div class="col-md-6 col-md-offset-3 text-center wrap_title ">
-				<h2>Screen App</h2>
-				<p class="lead" style="margin-top:0">A special thanks to Death.</p>
+				<h2>看一看日常廢圖</h2>
+				<p class="lead" style="margin-top:0">一些老婆日常跟我畫的委託˙ˇ˙</p>
 			 </div>
 		  </div>
 		    <div class="row wow bounceInUp" >
