--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 				
 				<a href="img/slide/3.png" class="image-link">
 					<div class="item">
-						<img  class="img-responsive img-rounded" src="img/slide/3.png" alt="Owl Image">
+						<img  class="img-responsive img-rounded" src="4.png" alt="Owl Image">
 					</div>
 				</a>
 				
